HMAN-80 Implementation